working out buildout factory generation

--- a/master.cfg
+++ b/master.cfg
@@ -18,7 +18,7 @@ from buildbot.buildslave import BuildSlave
 import nipybuildbot
 reload(nipybuildbot)
 
-from nipybuildbot import slaves, slaves26
+from nipybuildbot import slaves, slaves26,experimental
 # XXX: slave names must be unique
 c['slaves'] = slaves
 
@@ -97,19 +97,20 @@ c['schedulers'].append(
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
 from buildbot.steps.shell import ShellCommand, SetProperty
+from buildbot.steps.transfer import FileDownload,FileUpload
 from buildbot.process.properties import WithProperties
 
 # This is convenient for splitting sh commands into lists
 import shlex
 
-def nptest_command(pkg_name, verbose=10, doctests=False):
+def nptest_command(pkg_name, verbose=10, doctests=False, python='python'):
     """ Script for numpy.test based testers like nipy """
     pystr = ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
             % (pkg_name, pkg_name, doctests))
     if verbose != None:
         pystr += ', verbose=%d' % verbose
     pystr += ", extra_argv=['--first-package-wins']).wasSuccessful())"
-    return ShellCommand(command=['python', '-c', "%s" % pystr]) 
+    return ShellCommand(command=[python, '-c', "%s" % pystr]) 
 
 def nosetests_command(pkg_name, doctests=False):
     """ Script for nosetests-based testers like nibabel """
@@ -124,6 +125,24 @@ factory_nibabel.addStep(Git(repourl='git://github.com/nipy/nibabel.git', mode='c
 # run the tests (note that this will require that 'nosetests' is installed)
 factory_nibabel.addStep(nosetests_command('nibabel', doctests=True))
 
+def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
+    f = BuildFactory()
+    # check out the source
+    # XXX: the mastersrc should make appropriate changes based on numpy version
+    f.addStep(Git(repourl='git://github.com/nipy/nibabel.git', mode='copy'))
+    f.addStep(FileDownload(mastersrc="bootstrap.py",
+                                          slavedest="bootstrap.py"))
+    f.addStep(FileDownload(mastersrc="nibabel_buildout.cfg",
+                                          slavedest="buildout.cfg"))
+    f.addStep(ShellCommand(command=[python, "bootstrap.py"]))
+    f.addStep(ShellCommand(command=["bin/buildout"]))
+    f.addStep(nptest_command('nibabel',python='bin/buildoutpython'))
+    # run the tests (note that this will require that 'nosetests' is installed)
+    #f.addStep(nosetests_command('nibabel', doctests=True))
+    return f
+
+    
+factory_nibabel = BuildFactory()
 factory_nitime = BuildFactory()
 # check out the source
 factory_nitime.addStep(Git(repourl='git://github.com/nipy/nitime.git', mode='copy'))
@@ -204,6 +223,18 @@ c['builders'].append(
       slavenames=slaves26,
       factory=factory_dipy))
 
+c['builders'].append(
+    BuilderConfig(name="buildout-test2.6",
+      slavenames=experimental,
+      factory=factory_buildout_nibabel()))
+c['builders'].append(
+    BuilderConfig(name="buildout-test2.5",
+      slavenames=experimental,
+      factory=factory_buildout_nibabel('python2.5')))
+c['builders'].append(
+    BuilderConfig(name="buildout-test2.4",
+      slavenames=experimental,
+      factory=factory_buildout_nibabel('python2.4')))
 ####### STATUS TARGETS
 
 # 'status' is a list of Status Targets. The results of each build will be
