note about using github hook

--- a/master.cfg
+++ b/master.cfg
@@ -44,6 +44,8 @@ c['slavePortnum'] = 9989
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot clone of nibabel.
 
+#TODO: We should probably change the GitPoller to a PBChangeSource to react to
+# commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
 from buildbot.changes.gitpoller import GitPoller
 c['change_source'] = [
         GitPoller(
