--- a/master.cfg
+++ b/master.cfg
@@ -17,6 +17,19 @@
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
 
+# This is convenient for splitting sh commands into lists
+import shlex
+# Buildbot objects
+from buildbot.changes.gitpoller import GitPoller
+from buildbot.schedulers.filter import ChangeFilter
+from buildbot.scheduler import Scheduler
+from buildbot.process.factory import BuildFactory
+from buildbot.steps.source import Git
+from buildbot.steps.shell import ShellCommand, SetProperty
+from buildbot.steps.transfer import FileDownload,FileUpload
+from buildbot.process.properties import WithProperties
+from buildbot.config import BuilderConfig
+
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
@@ -26,11 +39,14 @@ c = BuildmasterConfig = {}
 # The 'slaves' list defines the set of recognized buildslaves. Each element is
 # a BuildSlave object, specifying a unique slave name and password.  The same
 # slave name and password must be configured on the slave.
-from buildbot.buildslave import BuildSlave
 import nipybuildbot
 reload(nipybuildbot)
 
 from nipybuildbot import slaves, slaves26,experimental
+linux_64_slaves = slaves26
+osx_ppc_slaves = ['jerry_standard']
+xp_slaves = ['xp-standard']
+
 # XXX: slave names must be unique
 c['slaves'] = slaves
 
@@ -39,6 +55,62 @@ c['slaves'] = slaves
 # --master option)
 c['slavePortnum'] = 9989
 
+# Helper functions and constants
+class GithubBot(object):
+    def __init__(self, organization, repo):
+        self.organization = organization
+        self.repo = repo
+        self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
+
+    def poller(self, branch="master", interval=300):
+        return GitPoller(
+            self.git_url,
+            workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
+            branch=branch,
+            pollinterval=interval)
+
+    def scheduler(self, buildernames):
+        if isinstance(buildernames, basestring):
+            buildernames = [buildernames]
+        name = "%s-%s" % (self.organization, self.repo)
+        changefilter = ChangeFilter(repository=self.git_url)
+        return Scheduler(name=name,
+                        change_filter=changefilter,
+                        treeStableTimer=None,
+                        builderNames=buildernames)
+
+    def factory(self, test_command):
+        factory = BuildFactory()
+        factory.addStep(Git(repourl=self.git_url, mode='copy'))
+        factory.addStep(ShellCommand(command=shlex.split(
+            "python setup.py build_ext --inplace")))
+        factory.addStep(SetProperty(command=shlex.split(
+            "python -c import os, sys; print os.getcwd(); sys.exit(0)",
+            property='absBuildDir')))
+        factory.addStep(ShellCommand(commmand=test_command,
+            env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
+        return factory
+
+    def build_builders(self, name_slavenames, test_command):
+        factory = self.factory(test_command)
+        builders = []
+        for name, slavelist in name_slavenames:
+            if isinstance(slavelist, basestring):
+                slavelist = [slavelist]
+            builders.append(BuilderConfig(
+                name=name,
+                slavenames=slavelist,
+                factory=factory))
+        return builders
+
+
+nibabel_bot = GithubBot('nipy', 'nibabel')
+nitime_bot = GithubBot('nipy', 'nitime')
+nipy_bot = GithubBot('nipy', 'nipy')
+nipy_mbi_bot = GithubBot('matthew-brett', 'nipy')
+nipy_alexis_bot = GithubBot('alexis-roche', 'nipy')
+dipy_bot = GithubBot('Garyfallidis', 'dipy')
+
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -46,52 +118,21 @@ c['slavePortnum'] = 9989
 
 #TODO: We should probably change the GitPoller to a PBChangeSource to react to
 # commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
-from buildbot.changes.gitpoller import GitPoller
-c['change_source'] = [
-        GitPoller(
-                'git://github.com/nipy/nibabel.git',
-                workdir='gitpoller/nibabel', branch='master',
-                pollinterval=300),
-        GitPoller(
-                'git://github.com/nipy/nitime.git',
-                workdir='gitpoller/nitime', branch='master',
-                pollinterval=300),
-        GitPoller(
-                'git://github.com/nipy/nipy.git',
-                workdir='gitpoller/nipy', branch='master',
-                pollinterval=300),
-        GitPoller(
-                'git://github.com/Garyfallidis/dipy.git',
-                workdir='gitpoller/dipy', branch='master',
-                pollinterval=300),
-        ]
+c['change_source'] = [bot.poller() for bot in (nibabel_bot,
+                                               nitime_bot,
+                                               nipy_bot,
+                                               dipy_bot)]
+
 
 ####### SCHEDULERS
 # Configure the Schedulers, which decide how to react to incoming changes.
-from buildbot.schedulers.filter import ChangeFilter
-from buildbot.scheduler import Scheduler
-c['schedulers'] = []
-c['schedulers'].append(
-                Scheduler(name="nibabel", 
-                        change_filter=ChangeFilter(repository="git://github.com/nipy/nibabel.git"),
-                        treeStableTimer=None,
-                        builderNames=["nibabel-py2.6"]))
-c['schedulers'].append(
-                Scheduler(name="nitime", 
-                        change_filter=ChangeFilter(repository="git://github.com/nipy/nitime.git"),
-                        treeStableTimer=None,
-                        builderNames=["nitime-py2.6"]))
-c['schedulers'].append(
-                Scheduler(name="nipy", 
-                        change_filter=ChangeFilter(repository="git://github.com/nipy/nipy.git"),
-                        treeStableTimer=None,
-                        builderNames=["nipy-py2.6"]))
-c['schedulers'].append(
-                Scheduler(name="dipy", 
-                        change_filter=ChangeFilter(repository="git://github.com/Garyfallidis/dipy.git"),
-                        treeStableTimer=None,
-                        builderNames=["dipy-py2.6"]))
 
+c['schedulers'] = [
+    nibabel_bot.scheduler(['nibabel-py2.6']),
+    nitime_bot.scheduler(['nibabel-py2.6']),
+    nipy_bot.scheduler(['nibabel-py2.6']),
+    dipy_bot.scheduler(['nibabel-py2.6']),
+]
 
 ####### BUILDERS
 
@@ -99,36 +140,22 @@ c['schedulers'].append(
 # what steps, and which slaves can execute them.  Note that any particular build will
 # only take place on one slave.
 
-from buildbot.process.factory import BuildFactory
-from buildbot.steps.source import Git
-from buildbot.steps.shell import ShellCommand, SetProperty
-from buildbot.steps.transfer import FileDownload,FileUpload
-from buildbot.process.properties import WithProperties
-
-# This is convenient for splitting sh commands into lists
-import shlex
-
-def nptest_command(pkg_name, verbose=10, doctests=False, python='python'):
-    """ Script for numpy.test based testers like nipy """
-    pystr = ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
-            % (pkg_name, pkg_name, doctests))
+def nptest_command(pkg_name,
+                   verbose=10,
+                   doctests=False,
+                   python='python',
+                   cd=False):
+    """ Run tests from new directory """
+    pystr = ''
+    if cd:
+        pystr += "import os; os.chdir('..');"
+    pystr += ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
+              % (pkg_name, pkg_name, doctests))
     if verbose != None:
         pystr += ', verbose=%d' % verbose
-    pystr += ", extra_argv=['--first-package-wins']).wasSuccessful())"
-    return ShellCommand(command=[python, '-c', "%s" % pystr]) 
+    pystr += ").wasSuccessful())"
+    return [python, '-c', "%s" % pystr]
 
-def nosetests_command(pkg_name, doctests=False):
-    """ Script for nosetests-based testers like nibabel """
-    cmds = ['nosetests', '--verbosity=3', pkg_name]
-    if doctests:
-        cmds.append('--with-doctest')
-    return ShellCommand(command=cmds)
-
-factory_nibabel = BuildFactory()
-# check out the source
-factory_nibabel.addStep(Git(repourl='git://github.com/nipy/nibabel.git', mode='copy'))
-# run the tests (note that this will require that 'nosetests' is installed)
-factory_nibabel.addStep(nosetests_command('nibabel', doctests=True))
 
 def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     f = BuildFactory()
@@ -146,108 +173,53 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     #f.addStep(nosetests_command('nibabel', doctests=True))
     return f
 
-factory_nitime = BuildFactory()
-# check out the source
-factory_nitime.addStep(Git(repourl='git://github.com/nipy/nitime.git', mode='copy'))
-# run the tests
-factory_nitime.addStep(nptest_command('nitime', verbose=None, doctests=False))
+factory_nibabel = nibabel_bot.factory(
+    test_command = shlex.split(
+        'nosetests --verbosity=3 --with-doctests nibabel'))
+factory_nitime = nitime_bot.factory(
+    test_command = nptest_command('nitime'), cd=True)
+factory_nipy = nipy_bot.factory(
+    test_command = nptest_command('nipy', doctests=True, cd=True))
+factory_nipy_mbi = nipy_mbi_bot.factory(
+    test_command = nptest_command('nipy', doctests=True, cd=True))
+factory_nipy_alexis = nipy_alexis_bot.factory(
+    test_command = nptest_command('nipy', doctests=True, cd=True))
+factory_dipy = dipy_bot.factory(
+    test_command = shlex.split(
+        'nosetests --verbosity=3 --with-doctests dipy'))
 
-factory_nipy = BuildFactory()
-# check out the source
-factory_nipy.addStep(Git(repourl='git://github.com/nipy/nipy.git', mode='copy'))
-# Build the code
-factory_nipy.addStep(ShellCommand(command=shlex.split("python setup.py build_ext --inplace")))
-# Get the working directory
-factory_nipy.addStep(SetProperty(command=["python", "-c", "import os, sys; print os.getcwd(); sys.exit(0)"], property='absBuildDir'))
-# run the tests (note that this will require that 'nose' is installed)
-factory_nipy.addStep(ShellCommand(
-            command=['python', 'tools/nipnost', 'nipy', '--verbosity=3'],
-            env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-
-factory_nipy_mbi = BuildFactory()
-# check out the source
-factory_nipy_mbi.addStep(Git(repourl='git://github.com/matthew-brett/nipy.git', branch='integration', mode='copy'))
-# Build the code
-factory_nipy_mbi.addStep(ShellCommand(command=shlex.split("python setup.py build_ext --inplace")))
-# Get the working directory
-factory_nipy_mbi.addStep(SetProperty(command=["python", "-c", "import os, sys; print os.getcwd(); sys.exit(0)"], property='absBuildDir'))
-# run the tests (requires nose)
-# factory_nipy_mbi.addStep(ShellCommand(
-#            command=['python', '-c', 'import sys, nipy.fixes; sys.exit(not nipy.fixes.test(verbose=3, extra_argv=["--first-package-wins"]).wasSuccessful())'],
-#            env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-factory_nipy_mbi.addStep(ShellCommand(
-            command=['python', 'tools/nipnost', 'nipy', '--verbosity=3'],
-            env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
-    
-factory_dipy = BuildFactory()
-# check out the source
-factory_dipy.addStep(Git(repourl='git://github.com/Garyfallidis/dipy.git', mode='copy'))
-# Build the code
-factory_dipy.addStep(ShellCommand(command=shlex.split("python setup.py build_ext --inplace")))
-# run the tests (note that this will require that 'nosetests' is installed)
-factory_dipy.addStep(nosetests_command('dipy', doctests=True))
-
-from buildbot.config import BuilderConfig
-
-c['builders'] = []
-c['builders'].append(
-    BuilderConfig(name="nibabel-py2.6",
-      slavenames=slaves26,
-      factory=factory_nibabel))
-c['builders'].append(
-    BuilderConfig(name="nibabel-py2.6-osx-10.4",
-      slavenames=['jerry-standard'],
-      factory=factory_nibabel))
-c['builders'].append(
-    BuilderConfig(name="nibabel-py2.6-xp",
-      slavenames=['xp-standard'],
-      factory=factory_nibabel))
-c['builders'].append(
-    BuilderConfig(name="nitime-py2.6",
-      slavenames=slaves26,
-      category='nitime',
-      factory=factory_nitime))
-c['builders'].append(
-    BuilderConfig(name="nitime-py2.6-osx-10.4",
-      slavenames=['jerry-standard'],
-      factory=factory_nitime))
-c['builders'].append(
-    BuilderConfig(name="nitime-py2.6-xp",
-      slavenames=['xp-standard'],
-      factory=factory_nitime))
-c['builders'].append(
-    BuilderConfig(name="nipy-py2.6",
-      slavenames=slaves26,
-      category='nipy',
-      factory=factory_nipy))
-c['builders'].append(
-    BuilderConfig(name="nipy-py2.6-osx-10.4",
-      slavenames=['jerry-standard'],
-      factory=factory_nipy))
-c['builders'].append(
-    BuilderConfig(name="nipy-py2.6-xp",
-      slavenames=['xp-standard'],
-      factory=factory_nipy))
-c['builders'].append(
-    BuilderConfig(name="nipy-py2.6-mbi",
-      slavenames=['tom-standard'],
-      category='nipy',
-      factory=factory_nipy_mbi))
-# dipy
-c['builders'].append(
-    BuilderConfig(name="dipy-py2.6",
-      slavenames=slaves26,
-      factory=factory_dipy))
-# The dipy builder seems to fail early sometimes, maybe due to:
+c['builders'] = nibabel_bot.build_builders(
+    (('nibabel-py2.6', slaves26),
+     ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nibabel-py2.6-xp', xp_slaves)),
+    shlex.split('nosetests --verbosity=3 --with-doctests nibabel'))
+c['builders'] += nitime_bot.build_builders(
+    (('nitime-py2.6', slaves26),
+     ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nitime-py2.6-xp', xp_slaves)),
+    nptest_command('nitime', cd=True))
+c['builders'] += nipy_bot.build_builders(
+    (('nipy-py2.6', slaves26),
+     ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-xp', xp_slaves)),
+    nptest_command('nipy', cd=True))
+c['builders'] += nipy_mbi_bot.build_builders(
+    (('nipy-py2.6-mbi', slaves26),
+     ('nipy-py2.6-mbi-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-mbi-xp', xp_slaves)),
+    nptest_command('nipy', cd=True))
+c['builders'] += nipy_alexis_bot.build_builders(
+    (('nipy-py2.6-alexis', slaves26),
+     ('nipy-py2.6-alexis-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-alexis-xp', xp_slaves)),
+    nptest_command('nipy', cd=True))
+# The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
-c['builders'].append(
-    BuilderConfig(name="dipy-py2.6-osx-10.4",
-      slavenames=['jerry-standard'],
-      factory=factory_dipy))
-c['builders'].append(
-    BuilderConfig(name="dipy-py2.6-xp",
-      slavenames=['xp-standard'],
-      factory=factory_dipy))
+c['builders'] += dipy_bot.build_builders(
+    (('dipy-py2.6', slaves26),
+     ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
+     ('dipy-py2.6-xp', xp_slaves)),
+    shlex.split('nosetests --verbosity=3 --with-doctests dipy'))
 
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
@@ -271,14 +243,18 @@ c['status'] = []
 
 from buildbot.status import html
 from buildbot.status.web import auth, authz
+
+http_auth = auth.HTPasswdAuth('bot_htpasswd')
+
 authz_cfg=authz.Authz(
+    auth = http_auth,
     # change any of these to True to enable; see the manual for more
     # options
     gracefulShutdown = False,
-    forceBuild = True, # use this to test your slave once it is set up
+    forceBuild = 'auth', # use this to test your slave once it is set up
     forceAllBuilds = False,
     pingBuilder = False,
-    stopBuild = False,
+    stopBuild = 'auth',
     stopAllBuilds = False,
     cancelPendingBuild = False,
 )
