BF - simple fixes to refactoring

--- a/master.cfg
+++ b/master.cfg
@@ -44,7 +44,7 @@ reload(nipybuildbot)
 
 from nipybuildbot import slaves, slaves26,experimental
 linux_64_slaves = slaves26
-osx_ppc_slaves = ['jerry_standard']
+osx_ppc_slaves = ['jerry-standard']
 xp_slaves = ['xp-standard']
 
 # XXX: slave names must be unique
@@ -85,9 +85,9 @@ class GithubBot(object):
         factory.addStep(ShellCommand(command=shlex.split(
             "python setup.py build_ext --inplace")))
         factory.addStep(SetProperty(command=shlex.split(
-            "python -c import os, sys; print os.getcwd(); sys.exit(0)",
-            property='absBuildDir')))
-        factory.addStep(ShellCommand(commmand=test_command,
+            "python -c 'import os, sys; print os.getcwd(); sys.exit(0)'"),
+            property='absBuildDir'))
+        factory.addStep(ShellCommand(command=test_command,
             env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
         return factory
 
@@ -144,7 +144,8 @@ def nptest_command(pkg_name,
                    verbose=10,
                    doctests=False,
                    python='python',
-                   cd=False):
+                   cd=False,
+                   stdout=False):
     """ Run tests from new directory """
     pystr = ''
     if cd:
@@ -168,55 +169,40 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
                                           slavedest="buildout.cfg"))
     f.addStep(ShellCommand(command=[python, "bootstrap.py"]))
     f.addStep(ShellCommand(command=["bin/buildout"]))
-    f.addStep(nptest_command('nibabel',python='bin/buildoutpython'))
+    f.addStep(ShellCommand(nptest_command('nibabel',python='bin/buildoutpython')))
     # run the tests (note that this will require that 'nosetests' is installed)
     #f.addStep(nosetests_command('nibabel', doctests=True))
     return f
 
-factory_nibabel = nibabel_bot.factory(
-    test_command = shlex.split(
-        'nosetests --verbosity=3 --with-doctests nibabel'))
-factory_nitime = nitime_bot.factory(
-    test_command = nptest_command('nitime'), cd=True)
-factory_nipy = nipy_bot.factory(
-    test_command = nptest_command('nipy', doctests=True, cd=True))
-factory_nipy_mbi = nipy_mbi_bot.factory(
-    test_command = nptest_command('nipy', doctests=True, cd=True))
-factory_nipy_alexis = nipy_alexis_bot.factory(
-    test_command = nptest_command('nipy', doctests=True, cd=True))
-factory_dipy = dipy_bot.factory(
-    test_command = shlex.split(
-        'nosetests --verbosity=3 --with-doctests dipy'))
-
 c['builders'] = nibabel_bot.build_builders(
-    (('nibabel-py2.6', slaves26),
+    (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctests nibabel'))
 c['builders'] += nitime_bot.build_builders(
-    (('nitime-py2.6', slaves26),
+    (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
      ('nitime-py2.6-xp', xp_slaves)),
     nptest_command('nitime', cd=True))
 c['builders'] += nipy_bot.build_builders(
-    (('nipy-py2.6', slaves26),
+    (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-xp', xp_slaves)),
-    nptest_command('nipy', cd=True))
+    nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_mbi_bot.build_builders(
-    (('nipy-py2.6-mbi', slaves26),
+    (('nipy-py2.6-mbi', linux_64_slaves),
      ('nipy-py2.6-mbi-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-mbi-xp', xp_slaves)),
-    nptest_command('nipy', cd=True))
+    nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_alexis_bot.build_builders(
-    (('nipy-py2.6-alexis', slaves26),
+    (('nipy-py2.6-alexis', linux_64_slaves),
      ('nipy-py2.6-alexis-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-alexis-xp', xp_slaves)),
-    nptest_command('nipy', cd=True))
+    nptest_command('nipy', doctests=True, cd=True))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
 c['builders'] += dipy_bot.build_builders(
-    (('dipy-py2.6', slaves26),
+    (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('dipy-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctests dipy'))
