BF - fix schedulers (all pointing to nibabel)

--- a/master.cfg
+++ b/master.cfg
@@ -128,10 +128,22 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
 # Configure the Schedulers, which decide how to react to incoming changes.
 
 c['schedulers'] = [
-    nibabel_bot.scheduler(['nibabel-py2.6']),
-    nitime_bot.scheduler(['nibabel-py2.6']),
-    nipy_bot.scheduler(['nibabel-py2.6']),
-    dipy_bot.scheduler(['nibabel-py2.6']),
+    nibabel_bot.scheduler(['nibabel-py2.6',
+                           'nibabel-py2.6-xp',
+                           'nibabel-py2.6-osx-10.4',
+                          ]),
+    nitime_bot.scheduler(['nitime-py2.6',
+                          'nitime-py2.6-xp',
+                          'nitime-py2.6-osx-10.4',
+                         ]),
+    nipy_bot.scheduler(['nipy-py2.6',
+                        'nipy-py2.6-xp',
+                        'nipy-py2.6-osx-10.4',
+                       ]),
+    dipy_bot.scheduler(['dipy-py2.6',
+                        'dipy-py2.6-xp',
+                        'dipy-py2.6-osx-10.4',
+                       ]),
 ]
 
 ####### BUILDERS
@@ -248,6 +260,7 @@ c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
 
 ####### PROJECT IDENTITY
 
+:q
 # the 'title' string will appear at the top of this buildbot
 # installation's html.WebStatus home page (linked to the
 # 'titleURL') and is embedded in the title of the waterfall HTML page.
