RF - allow force all builds

--- a/master.cfg
+++ b/master.cfg
@@ -246,11 +246,11 @@ http_auth = auth.HTPasswdAuth('bot_htpasswd')
 
 authz_cfg=authz.Authz(
     auth = http_auth,
-    # change any of these to True to enable; see the manual for more
-    # options
+    # change any of these to True to enable; 'auth' to require authorization'
+    # see the manual for more options
     gracefulShutdown = False,
-    forceBuild = 'auth', # use this to test your slave once it is set up
-    forceAllBuilds = False,
+    forceBuild = 'auth',
+    forceAllBuilds = 'auth',
     pingBuilder = False,
     stopBuild = 'auth',
     stopAllBuilds = False,
