--- a/master.cfg
+++ b/master.cfg
@@ -190,7 +190,7 @@ c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-xp', xp_slaves)),
-    shlex.split('nosetests --verbosity=3 --with-doctests nibabel'))
+    shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
@@ -217,7 +217,7 @@ c['builders'] += dipy_bot.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('dipy-py2.6-xp', xp_slaves)),
-    shlex.split('nosetests --verbosity=3 --with-doctests dipy'))
+    shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
 
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
