--- a/master.cfg
+++ b/master.cfg
@@ -202,7 +202,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
      ('nitime-py2.6-xp', xp_slaves)),
-    nptest_command('nitime', cd=True))
+    nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
