--- a/master.cfg
+++ b/master.cfg
@@ -46,6 +46,7 @@ from nipybuildbot import slaves, slaves26,experimental
 linux_64_slaves = slaves26
 linux_32_slaves = ['anwar-standard']
 osx_ppc_slaves = ['jerry-standard']
+osx_intel_slaves = ['osx-10.5']
 xp_slaves = ['xp-standard']
 
 # XXX: slave names must be unique
@@ -133,21 +134,25 @@ c['schedulers'] = [
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
                            'nibabel-py2.6-osx-10.4',
+                           'nibabel-py2.6-osx-10.5',
                           ]),
     nitime_bot.scheduler(['nitime-py2.6',
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
                           'nitime-py2.6-osx-10.4',
+                          'nitime-py2.6-osx-10.5',
                          ]),
     nipy_bot.scheduler(['nipy-py2.6',
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
                         'nipy-py2.6-osx-10.4',
+                        'nipy-py2.6-osx-10.5',
                        ]),
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
                         'dipy-py2.6-osx-10.4',
+                        'dipy-py2.6-osx-10.5',
                        ]),
 ]
 
@@ -195,30 +200,35 @@ c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
      ('nibabel-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nitime-py2.6-osx-10.5', osx_intel_slaves),
      ('nitime-py2.6-xp', xp_slaves)),
     nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-osx-10.5', osx_intel_slaves),
      ('nipy-py2.6-xp', xp_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_mbi_bot.build_builders(
     (('nipy-py2.6-mbi', linux_64_slaves),
      ('nipy-py2.6-mbi-32', linux_32_slaves),
      ('nipy-py2.6-mbi-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-mbi-osx-10.5', osx_intel_slaves),
      ('nipy-py2.6-mbi-xp', xp_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_alexis_bot.build_builders(
     (('nipy-py2.6-alexis', linux_64_slaves),
      ('nipy-py2.6-alexis-32', linux_32_slaves),
      ('nipy-py2.6-alexis-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-alexis-osx-10.5', osx_intel_slaves),
      ('nipy-py2.6-alexis-xp', xp_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
@@ -227,6 +237,7 @@ c['builders'] += dipy_bot.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-32', linux_32_slaves),
      ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
+     ('dipy-py2.6-osx-10.5', osx_intel_slaves),
      ('dipy-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
 
