--- a/master.cfg
+++ b/master.cfg
@@ -108,11 +108,13 @@ class GithubBot(object):
 
 nibabel_bot = GithubBot('nipy', 'nibabel')
 nitime_bot = GithubBot('nipy', 'nitime')
+nitime_arokem_bot = GithubBot('arokem','nitime')
 nipy_bot = GithubBot('nipy', 'nipy')
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy')
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy')
-dipy_bot = GithubBot('Garyfallidis', 'dipy')
+dipy_bot = GithubBot('nipy', 'dipy') 
 
+                                             
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -209,6 +211,13 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
      ('nitime-py2.6-osx-10.5', osx_intel_slaves),
      ('nitime-py2.6-xp', xp_slaves)),
+    nptest_command('nitime', verbose=None, cd=True))
+c['builders'] += nitime_arokem_bot.build_builders(
+    (('nitime-py2.6-arokem', linux_64_slaves),
+     ('nitime-py2.6-arokem-32', linux_32_slaves),
+     ('nitime-py2.6-arokem-osx-10.4', osx_ppc_slaves),
+     ('nitime-py2.6-arokem-osx-10.5', osx_intel_slaves),
+     ('nitime-py2.6-arokem-xp', xp_slaves)),
     nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
