Added nipype (nostests only).

--- a/master.cfg
+++ b/master.cfg
@@ -112,7 +112,8 @@ nitime_arokem_bot = GithubBot('arokem','nitime')
 nipy_bot = GithubBot('nipy', 'nipy')
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy')
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy')
-dipy_bot = GithubBot('nipy', 'dipy') 
+dipy_bot = GithubBot('nipy', 'dipy')
+nipype_bot = GithubBot('nipy', 'nipype')
 
                                              
 ####### CHANGESOURCES
@@ -153,6 +154,11 @@ c['schedulers'] = [
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
+                        'dipy-py2.6-osx-10.4',
+                        'dipy-py2.6-osx-10.5',
+                       ]),
+    nipype_bot.scheduler(['dipy-py2.6',
+                        'dipy-py2.6-32',
                         'dipy-py2.6-osx-10.4',
                         'dipy-py2.6-osx-10.5',
                        ]),
@@ -249,6 +255,12 @@ c['builders'] += dipy_bot.build_builders(
      ('dipy-py2.6-osx-10.5', osx_intel_slaves),
      ('dipy-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
+c['builders'] += nipype_bot.build_builders(
+    (('nipy-py2.6', linux_64_slaves),
+     ('nipy-py2.6-32', linux_32_slaves),
+     ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nipy-py2.6-osx-10.5', osx_intel_slaves)),
+    nptest_command('nipype', doctests=True, cd=True))
 
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
