--- a/master.cfg
+++ b/master.cfg
@@ -157,10 +157,10 @@ c['schedulers'] = [
                         'dipy-py2.6-osx-10.4',
                         'dipy-py2.6-osx-10.5',
                        ]),
-    nipype_bot.scheduler(['dipy-py2.6',
-                        'dipy-py2.6-32',
-                        'dipy-py2.6-osx-10.4',
-                        'dipy-py2.6-osx-10.5',
+    nipype_bot.scheduler(['nipype-py2.6',
+                        'nipype-py2.6-32',
+                        'nipype-py2.6-osx-10.4',
+                        'nipype-py2.6-osx-10.5',
                        ]),
 ]
 
@@ -256,10 +256,10 @@ c['builders'] += dipy_bot.build_builders(
      ('dipy-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
 c['builders'] += nipype_bot.build_builders(
-    (('nipy-py2.6', linux_64_slaves),
-     ('nipy-py2.6-32', linux_32_slaves),
-     ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nipy-py2.6-osx-10.5', osx_intel_slaves)),
+    (('nipype-py2.6', linux_64_slaves),
+     ('nipype-py2.6-32', linux_32_slaves),
+     ('nipype-py2.6-osx-10.4', osx_ppc_slaves),
+     ('nipype-py2.6-osx-10.5', osx_intel_slaves)),
     nptest_command('nipype', doctests=True, cd=True))
 
 c['builders'].append(
