NF - add sparc slave

--- a/master.cfg
+++ b/master.cfg
@@ -48,6 +48,7 @@ linux_32_slaves = ['anwar-standard']
 osx_ppc_slaves = ['jerry-standard']
 osx_intel_slaves = ['osx-10.5']
 xp_slaves = ['xp-standard']
+sparc_slaves = ['nd-bb-slave-sparc']
 
 # XXX: slave names must be unique
 c['slaves'] = slaves
@@ -126,7 +127,8 @@ nipype_bot = GithubBot('nipy', 'nipype')
 c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nitime_bot,
                                                nipy_bot,
-                                               dipy_bot)]
+                                               dipy_bot,
+                                               nipype_bot)]
 
 
 ####### SCHEDULERS
@@ -136,6 +138,7 @@ c['schedulers'] = [
     nibabel_bot.scheduler(['nibabel-py2.6',
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
+                           'nibabel-py2.6-sparc',
                            'nibabel-py2.6-osx-10.4',
                            'nibabel-py2.6-osx-10.5',
                           ]),
@@ -209,7 +212,8 @@ c['builders'] = nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
-     ('nibabel-py2.6-xp', xp_slaves)),
+     ('nibabel-py2.6-xp', xp_slaves),
+     ('nibabel-py2.6-sparc', sparc_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
