--- a/master.cfg
+++ b/master.cfg
@@ -151,6 +151,7 @@ c['schedulers'] = [
     nipy_bot.scheduler(['nipy-py2.6',
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
+                        'nipy-py2.6-sparc',
                         'nipy-py2.6-osx-10.4',
                         'nipy-py2.6-osx-10.5',
                        ]),
@@ -234,7 +235,8 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-osx-10.5', osx_intel_slaves),
-     ('nipy-py2.6-xp', xp_slaves)),
+     ('nipy-py2.6-xp', xp_slaves),
+     ('nipy-py2.6-sparc', sparc_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_mbi_bot.build_builders(
     (('nipy-py2.6-mbi', linux_64_slaves),
