added Matthew's Raspberry Pi buildslave!

--- a/master.cfg
+++ b/master.cfg
@@ -49,6 +49,7 @@ osx_ppc_slaves = ['jerry-standard']
 osx_intel_slaves = ['osx-10.5']
 xp_slaves = ['xp-standard']
 sparc_slaves = ['nd-bb-slave-sparc']
+arm_slaves = ['arm-raspberry-pi']
 
 # XXX: slave names must be unique
 c['slaves'] = slaves
@@ -213,6 +214,7 @@ c['builders'] = nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
+     ('nibabel-py2.6-arm', arm_slaves),
      ('nibabel-py2.6-xp', xp_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
@@ -221,6 +223,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
      ('nitime-py2.6-osx-10.5', osx_intel_slaves),
+     ('nitime-py2.6-arm', arm_slaves),
      ('nitime-py2.6-xp', xp_slaves)),
     nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nitime_arokem_bot.build_builders(
@@ -235,6 +238,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-osx-10.5', osx_intel_slaves),
+     ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.6-xp', xp_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
@@ -259,13 +263,15 @@ c['builders'] += dipy_bot.build_builders(
      ('dipy-py2.6-32', linux_32_slaves),
      ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('dipy-py2.6-osx-10.5', osx_intel_slaves),
+     ('dipy-py2.6-arm', arm_slaves),
      ('dipy-py2.6-xp', xp_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nipype-py2.6-osx-10.5', osx_intel_slaves)),
+     ('nipype-py2.6-osx-10.5', osx_intel_slaves),
+     ('nipype-py2.6-arm', arm_slaves)),
     nptest_command('nipype', doctests=True, cd=True))
 
 c['builders'].append(
