NF: add arm builders to scheduled builds

--- a/master.cfg
+++ b/master.cfg
@@ -140,6 +140,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
                            'nibabel-py2.6-sparc',
+                           'nibabel-py2.6-arm',
                            'nibabel-py2.6-osx-10.4',
                            'nibabel-py2.6-osx-10.5',
                           ]),
@@ -153,6 +154,7 @@ c['schedulers'] = [
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
                         'nipy-py2.6-sparc',
+                        'nipy-py2.6-arm',
                         'nipy-py2.6-osx-10.4',
                         'nipy-py2.6-osx-10.5',
                        ]),
