NF: add PPC build slaves

--- a/master.cfg
+++ b/master.cfg
@@ -46,6 +46,7 @@ from nipybuildbot import slaves, slaves26,experimental
 linux_64_slaves = slaves26
 linux_32_slaves = ['anwar-standard']
 osx_ppc_slaves = ['jerry-standard']
+debian_ppc_slaves = ['debian-ppc-32']
 osx_intel_slaves = ['osx-10.5']
 xp_slaves = ['xp-standard']
 sparc_slaves = ['nd-bb-slave-sparc']
@@ -140,6 +141,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
                            'nibabel-py2.6-sparc',
+                           'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
                            'nibabel-py2.6-osx-10.4',
                            'nibabel-py2.6-osx-10.5',
@@ -154,6 +156,7 @@ c['schedulers'] = [
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
                         'nipy-py2.6-sparc',
+                        'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
                         'nipy-py2.6-osx-10.4',
                         'nipy-py2.6-osx-10.5',
@@ -216,6 +219,7 @@ c['builders'] = nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
+     ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
      ('nibabel-py2.6-xp', xp_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)),
@@ -240,6 +244,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-osx-10.5', osx_intel_slaves),
+     ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.6-xp', xp_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)),
