Add new XP and OSX PPC slaves with builders

--- a/master.cfg
+++ b/master.cfg
@@ -46,9 +46,10 @@ from nipybuildbot import slaves, slaves26,experimental
 linux_64_slaves = slaves26
 linux_32_slaves = ['anwar-standard']
 osx_ppc_slaves = ['jerry-standard']
+osx_ppc_25_slaves = ['osx-mini']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_intel_slaves = ['osx-10.5']
-xp_slaves = ['xp-standard']
+xp_slaves = ['xp-standard', 'xp-mini']
 sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
@@ -143,6 +144,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-sparc',
                            'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
+                           'nibabel-py2.5-osx-10.4',
                            'nibabel-py2.6-osx-10.4',
                            'nibabel-py2.6-osx-10.5',
                           ]),
@@ -158,6 +160,7 @@ c['schedulers'] = [
                         'nipy-py2.6-sparc',
                         'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
+                        'nipy-py2.5-osx-10.4',
                         'nipy-py2.6-osx-10.4',
                         'nipy-py2.6-osx-10.5',
                        ]),
@@ -217,6 +220,7 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
 c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
+     ('nibabel-py2.5-osx-10.4', osx_ppc_25_slaves),
      ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
      ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
@@ -242,6 +246,7 @@ c['builders'] += nitime_arokem_bot.build_builders(
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
+     ('nipy-py2.5-osx-10.4', osx_ppc_25_slaves),
      ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
      ('nipy-py2.6-osx-10.5', osx_intel_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
