Swap from Jerry to Alexis for OSX PPC builds

--- a/master.cfg
+++ b/master.cfg
@@ -45,7 +45,7 @@ reload(nipybuildbot)
 from nipybuildbot import slaves, slaves26,experimental
 linux_64_slaves = slaves26
 linux_32_slaves = ['anwar-standard']
-osx_ppc_slaves = ['jerry-standard']
+osx_ppc_slaves = ['osx-10.5-ppc']
 osx_ppc_25_slaves = ['osx-mini']
 debian_ppc_slaves = ['debian-ppc-32']
 osx_intel_slaves = ['osx-10.5']
