RF: refactor slave names

--- a/master.cfg
+++ b/master.cfg
@@ -42,14 +42,14 @@ c = BuildmasterConfig = {}
 import nipybuildbot
 reload(nipybuildbot)
 
-from nipybuildbot import slaves, slaves26,experimental
-linux_64_slaves = slaves26
+from nipybuildbot import slaves, experimental
+linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['anwar-standard']
-osx_ppc_slaves = ['osx-10.5-ppc']
-osx_ppc_25_slaves = ['osx-mini']
+osx_leopard_ppc_slaves = ['osx-10.5-ppc']
+osx_tiger_ppc_slaves = ['osx-mini']
 debian_ppc_slaves = ['debian-ppc-32']
-osx_intel_slaves = ['osx-10.5']
-xp_slaves = ['xp-standard', 'xp-mini']
+osx_leopard_intel_slaves = ['osx-10.5']
+xp_32_slaves = ['xp-standard', 'xp-mini']
 sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
@@ -87,7 +87,7 @@ class GithubBot(object):
 
     def factory(self, test_command):
         factory = BuildFactory()
-        factory.addStep(Git(repourl=self.git_url, mode='copy'))
+        factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
         factory.addStep(ShellCommand(command=shlex.split(
             "python setup.py build_ext --inplace")))
         factory.addStep(SetProperty(command=shlex.split(
@@ -144,15 +144,16 @@ c['schedulers'] = [
                            'nibabel-py2.6-sparc',
                            'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
-                           'nibabel-py2.5-osx-10.4',
-                           'nibabel-py2.6-osx-10.4',
-                           'nibabel-py2.6-osx-10.5',
+                           'nibabel-py2.5-osx-10.4-ppc',
+                           'nibabel-py2.6-osx-10.5-ppc',
+                           'nibabel-py2.6-osx-10.5-intel',
                           ]),
     nitime_bot.scheduler(['nitime-py2.6',
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
-                          'nitime-py2.6-osx-10.4',
-                          'nitime-py2.6-osx-10.5',
+                          'nitime-py2.5-osx-10.4-ppc',
+                          'nitime-py2.6-osx-10.5-ppc',
+                          'nitime-py2.6-osx-10.5-intel',
                          ]),
     nipy_bot.scheduler(['nipy-py2.6',
                         'nipy-py2.6-32',
@@ -160,20 +161,22 @@ c['schedulers'] = [
                         'nipy-py2.6-sparc',
                         'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
-                        'nipy-py2.5-osx-10.4',
-                        'nipy-py2.6-osx-10.4',
-                        'nipy-py2.6-osx-10.5',
+                        'nipy-py2.5-osx-10.4-ppc',
+                        'nipy-py2.6-osx-10.5-ppc',
+                        'nipy-py2.6-osx-10.5-intel',
                        ]),
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
-                        'dipy-py2.6-osx-10.4',
-                        'dipy-py2.6-osx-10.5',
+                        'dipy-py2.5-osx-10.4-ppc',
+                        'dipy-py2.6-osx-10.5-ppc',
+                        'dipy-py2.6-osx-10.5-intel',
                        ]),
     nipype_bot.scheduler(['nipype-py2.6',
                         'nipype-py2.6-32',
-                        'nipype-py2.6-osx-10.4',
-                        'nipype-py2.6-osx-10.5',
+                        'nipype-py2.5-osx-10.4-ppc',
+                        'nipype-py2.6-osx-10.5-ppc',
+                        'nipype-py2.6-osx-10.5-intel',
                        ]),
 ]
 
@@ -220,69 +223,75 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
 c['builders'] = nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
      ('nibabel-py2.6-32', linux_32_slaves),
-     ('nibabel-py2.5-osx-10.4', osx_ppc_25_slaves),
-     ('nibabel-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nibabel-py2.6-osx-10.5', osx_intel_slaves),
+     ('nibabel-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
-     ('nibabel-py2.6-xp', xp_slaves),
+     ('nibabel-py2.6-xp', xp_32_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest nibabel'))
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
      ('nitime-py2.6-32', linux_32_slaves),
-     ('nitime-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nitime-py2.6-osx-10.5', osx_intel_slaves),
+     ('nitime-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
-     ('nitime-py2.6-xp', xp_slaves)),
+     ('nitime-py2.6-xp', xp_32_slaves)),
     nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nitime_arokem_bot.build_builders(
     (('nitime-py2.6-arokem', linux_64_slaves),
      ('nitime-py2.6-arokem-32', linux_32_slaves),
-     ('nitime-py2.6-arokem-osx-10.4', osx_ppc_slaves),
-     ('nitime-py2.6-arokem-osx-10.5', osx_intel_slaves),
-     ('nitime-py2.6-arokem-xp', xp_slaves)),
+     ('nitime-py2.5-arokem-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nitime-py2.6-arokem-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nitime-py2.6-arokem-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('nitime-py2.6-arokem-xp', xp_32_slaves)),
     nptest_command('nitime', verbose=None, cd=True))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
-     ('nipy-py2.5-osx-10.4', osx_ppc_25_slaves),
-     ('nipy-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nipy-py2.6-osx-10.5', osx_intel_slaves),
+     ('nipy-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
-     ('nipy-py2.6-xp', xp_slaves),
+     ('nipy-py2.6-xp', xp_32_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_mbi_bot.build_builders(
     (('nipy-py2.6-mbi', linux_64_slaves),
      ('nipy-py2.6-mbi-32', linux_32_slaves),
-     ('nipy-py2.6-mbi-osx-10.4', osx_ppc_slaves),
-     ('nipy-py2.6-mbi-osx-10.5', osx_intel_slaves),
-     ('nipy-py2.6-mbi-xp', xp_slaves)),
+     ('nipy-py2.5-mbi-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nipy-py2.6-mbi-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipy-py2.6-mbi-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('nipy-py2.6-mbi-xp', xp_32_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 c['builders'] += nipy_alexis_bot.build_builders(
     (('nipy-py2.6-alexis', linux_64_slaves),
      ('nipy-py2.6-alexis-32', linux_32_slaves),
-     ('nipy-py2.6-alexis-osx-10.4', osx_ppc_slaves),
-     ('nipy-py2.6-alexis-osx-10.5', osx_intel_slaves),
-     ('nipy-py2.6-alexis-xp', xp_slaves)),
+     ('nipy-py2.5-alexis-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nipy-py2.6-alexis-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipy-py2.6-alexis-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('nipy-py2.6-alexis-xp', xp_32_slaves)),
     nptest_command('nipy', doctests=True, cd=True))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
 c['builders'] += dipy_bot.build_builders(
     (('dipy-py2.6', linux_64_slaves),
      ('dipy-py2.6-32', linux_32_slaves),
-     ('dipy-py2.6-osx-10.4', osx_ppc_slaves),
-     ('dipy-py2.6-osx-10.5', osx_intel_slaves),
+     ('dipy-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
-     ('dipy-py2.6-xp', xp_slaves)),
+     ('dipy-py2.6-xp', xp_32_slaves)),
     shlex.split('nosetests --verbosity=3 --with-doctest dipy'))
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
-     ('nipype-py2.6-osx-10.4', osx_ppc_slaves),
-     ('nipype-py2.6-osx-10.5', osx_intel_slaves),
+     ('nipype-py2.5-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipype-py2.6-arm', arm_slaves)),
     nptest_command('nipype', doctests=True, cd=True))
 
