--- a/edu.berkeley.bic.micheal.osx-10.4-intel.plist
+++ b/edu.berkeley.bic.micheal.osx-10.4-intel.plist
@@ -11,6 +11,8 @@
             <!-- Need local installs on the PATH - for nosetests in particular-->
             <key>PATH</key>
             <string>/Library/Frameworks/Python.framework/Versions/2.7/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin</string>
+            <key>MACOSX_DEPLOYMENT_TARGET</key>
+            <string>10.3</string>
         </dict>
 
         <!-- Change this to the user you want to run buildbot as -->
