BF: replace 32 bit linux slave
I gave the old 32 bit machine to another lab.

--- a/master.cfg
+++ b/master.cfg
@@ -44,7 +44,7 @@ reload(nipybuildbot)
 
 from nipybuildbot import slaves, experimental
 linux_64_slaves = ['tom-standard']
-linux_32_slaves = ['anwar-standard']
+linux_32_slaves = ['bongoslave']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
 osx_tiger_intel_slaves = ['osx-10.4-intel']
