RF: use slave_pass file for slave passwords
Further definition of slaves goes in the nibotmi file.  Thus adding a
slave is

1. Adding the name and password to the slave_pass.py dictionary
2. Defining properties of said slave in master.cfg file, such as aliases
   etc

--- a/master.cfg
+++ b/master.cfg
@@ -20,6 +20,7 @@
 # This is convenient for splitting sh commands into lists
 import shlex
 # Buildbot objects
+from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
 from buildbot.scheduler import Scheduler
@@ -36,13 +37,22 @@ c = BuildmasterConfig = {}
 
 ####### BUILDSLAVES
 
+# Get passwords from file not in repository.  `slave_pass.py` defines a dict,
+# `slave_passes` with key, value pairs defining (slave_name, slave_password)
+import slave_pass as s_p
+reload(s_p)
+# Check that slave names are unique
+if len(set(s_p.slave_passes)) != len(s_p.slave_passes):
+    raise ValueError('Slave names must be unique')
+
 # The 'slaves' list defines the set of recognized buildslaves. Each element is
 # a BuildSlave object, specifying a unique slave name and password.  The same
 # slave name and password must be configured on the slave.
-import nipybuildbot
-reload(nipybuildbot)
+slaves = [BuildSlave(slave_name, slave_pass)
+    for slave_name, slave_pass in s_p.slave_passes.items()]
 
-from nipybuildbot import slaves, experimental
+experimental = ['pi-ApxuMed',]
+
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
@@ -54,7 +64,7 @@ xp_32_slaves = ['xp-standard', 'xp-mini']
 sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
-# XXX: slave names must be unique
+# slave names must be unique
 c['slaves'] = slaves
 
 # 'slavePortnum' defines the TCP port to listen on for connections from slaves.
